--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="vi">
 <head>
 	<title>Happy Birthday Sachin!!</title>
 	<meta charset="UTF-8" />
-	<meta name="description" content="Happy Birthday Sonangi">
+	<meta name="description" content="Happy Birthday Mẹ Loan">
 	<meta name="robots" content="index, follow" />
     <meta name="keywords" content="Birthday, Happy">
     <meta property="og:type" content="E-Greeting" />
     <meta property="og:image" content="favicon.ico" />
-    <meta property="og:description" content="Wish you a very Happy Birthday">
+    <meta property="og:description" content="Chúc mẹ iu có một ngày Sinh Nhật Vui Vẻ">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0, minimum-scale=1.0, maximum-scale=1.0">
 	<meta name="apple-mobile-web-app-capable" content="yes">
 	<meta name="apple-mobile-web-app-status-bar-style" content="black">
@@ -102,23 +102,23 @@
 			<div class="col-md-12">
 				<p>Happy</p>
 				<p>Birthday</p>
-				<p>Sachin!!!!</p>
-				<p>God</p>
-				<p>Bless</p>
-				<p><strong>You!!!!!!!!!!</strong></p>
+				<p>My Mom</p>
+				<p>Sinh</p>
+				<p>Nhật</p>
+				<p><strong>Vui Vẻ</strong></p>
 			</div>
 		</div>
 		<div class="navbar navbar-fixed-bottom">
 			<div class="row">
 				<div class="col-md-6 text-center col-md-offset-3">
-					<button class="btn btn-primary" id="turn_on">Turn On Lights</button>
-					<button class="btn btn-primary" id="play">Special Music for You!! Let's play</button>
-					<button class="btn btn-primary" id="bannar_coming">Let's do some decoration!!</button>
-					<button class="btn btn-primary" id="balloons_flying">Some Balloons!!</button>
-					<button class="btn btn-primary" id="cake_fadein">Special Cake for You</button>
-					<button class="btn btn-primary" id="light_candle">Light a Candle</button>
-					<button class="btn btn-primary" id="wish_message">Happy Birthday Sachin!!</button>
-					<button class="btn btn-primary" id="story">Message for You Buddy!!</button>
+					<button class="btn btn-primary" id="turn_on">Click để bật đèn</button>
+					<button class="btn btn-primary" id="play">Âm nhạc này là cho bạn!! Let's play</button>
+					<button class="btn btn-primary" id="bannar_coming">Trang Trí 1 tí nào!!</button>
+					<button class="btn btn-primary" id="balloons_flying">Vài quả bóng bay!!</button>
+					<button class="btn btn-primary" id="cake_fadein">Chiếc bánh đặc biệt này ho Bạn</button>
+					<button class="btn btn-primary" id="light_candle">Thắp một ngọn nến</button>
+					<button class="btn btn-primary" id="wish_message">Happy Birthday My Mom!!</button>
+					<button class="btn btn-primary" id="story">Message for You!!</button>
 				</div>
 			</div>
 		</div>
