--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="vi">
 <head>
-	<title>Happy Birthday Sachin!!</title>
+	<title>Happy Birthday Mẹ !!</title>
 	<meta charset="UTF-8" />
 	<meta name="description" content="Happy Birthday Mẹ Loan">
 	<meta name="robots" content="index, follow" />
