--- a/index.html
+++ b/index.html
@@ -1,23 +1,123 @@
 <!DOCTYPE html>
 <html lang="vi">
 <head>
-	<title>Happy Birthday Mẹ !!</title>
+	<title>Happy Birthday My Mom!!</title>
 	<meta charset="UTF-8" />
-	<meta name="description" content="Happy Birthday Mẹ Loan">
+	<meta name="description" content="Happy Birthday Mẹ iu">
 	<meta name="robots" content="index, follow" />
     <meta name="keywords" content="Birthday, Happy">
     <meta property="og:type" content="E-Greeting" />
     <meta property="og:image" content="favicon.ico" />
-    <meta property="og:description" content="Chúc mẹ iu có một ngày Sinh Nhật Vui Vẻ">
+    <meta property="og:description" content="Chúc Bạn Có Một Ngày Sinh Nhật Vui Vẻ">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0, minimum-scale=1.0, maximum-scale=1.0">
 	<meta name="apple-mobile-web-app-capable" content="yes">
 	<meta name="apple-mobile-web-app-status-bar-style" content="black">
 	<meta http-equiv="X-UA-Compatible" content="IE=9; IE=8; IE=7; IE=EDGE" />
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="stylesheet.css">
-	<link rel="stylesheet" type="Cho Bạn</button>
+	<link rel="stylesheet" type="text/css" href="loading.css">
+	<link href='http://fonts.googleapis.com/css?family=Signika' rel='stylesheet' type='text/css'>
+	<link rel="stylesheet/less" href="cake.less">
+	<script src="//cdnjs.cloudflare.com/ajax/libs/less.js/2.1.0/less.min.js"></script>
+</head>
+
+<body>
+	<div class="loading"></div>
+	<audio class="song" controls loop>
+        <source src="hbd.mp3"></source>
+	   Your browser isn't supported for this Audio!!.
+    </audio>
+    <div class="balloons text-center" id="b1">
+    	<h2 style="color:#F2B300;">H</h2>
+    </div>
+    <div class="balloons text-center" id="b2">
+    	<h2 style="color:#0719D4;">B</h2>
+    </div>
+	<div class="balloons text-center" id="b3">
+    	<h2 style="color:#D14D39;">D</h2>
+    </div>
+	<div class="balloons text-center" id="b4">
+    	<h2 style="color:#8FAD00;">M</h2>
+    </div>
+	<div class="balloons text-center" id="b5">
+    	<h2 style="color:#8377E4;">Ẹ</h2>
+    </div>
+    <div class="balloons text-center" id="b6">
+    	<h2 style="color:#99C96A;">L</h2>
+    </div>
+    <div class="balloons text-center" id="b7">
+    	<h2 style="color:#20CFB4;">O</h2>
+	</div>
+	<div class="balloons text-center" id="b8">
+    	<h2 style="color:#D14D39;">A</h2>
+	</div>
+	<div class="balloons text-center" id="b9">
+    	<h2 style="color:#F2B300;">N</h2>
+	</div>
+
+    <img src="Balloon-Border.png" width="100%" class="balloon-border">
+	<div class="container">
+		
+		<div class="row">
+			<div class="col-md-2 col-xs-2 bulb-holder">
+				<div class="bulb" id="bulb_yellow"></div>
+			</div>
+			<div class="col-md-2 col-xs-2 bulb-holder">
+				<div class="bulb" id="bulb_red"></div>
+			</div>
+			<div class="col-md-2 col-xs-2 bulb-holder">
+				<div class="bulb" id="bulb_blue"></div>
+			</div>
+			<div class="col-md-2 col-xs-2 bulb-holder">
+				<div class="bulb" id="bulb_green"></div>
+			</div>
+			<div class="col-md-2 col-xs-2 bulb-holder">
+				<div class="bulb" id="bulb_pink"></div>
+			</div>
+			<div class="col-md-2 col-xs-2 bulb-holder">
+				<div class="bulb" id="bulb_orange"></div>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-md-12 text-center">
+				<img src="banner.png" class="bannar">
+			</div>
+		</div>
+		<div class="row cake-cover">
+			<div class="col-md-12 texr-center">
+				<div class="cake">
+				  <div class="velas">
+				    <div class="fuego"></div>
+				    <div class="fuego"></div>
+				    <div class="fuego"></div>
+				    <div class="fuego"></div>
+				    <div class="fuego"></div>
+				  </div>
+				  <div class="cobertura"></div>
+				  <div class="bizcocho"></div>
+				</div>
+			</div>
+		</div>
+		<div class="row message">
+			<div class="col-md-12">
+				<p>Happy</p>
+				<p>Birthday</p>
+				<p>Sachin!!!!</p>
+				<p>God</p>
+				<p>Bless</p>
+				<p><strong>You!!!!!!!!!!</strong></p>
+			</div>
+		</div>
+		<div class="navbar navbar-fixed-bottom">
+			<div class="row">
+				<div class="col-md-6 text-center col-md-offset-3">
+					<button class="btn btn-primary" id="turn_on">CLICK ĐỂ BẬT ĐÈN</button>
+					<button class="btn btn-primary" id="play">ÂM NHẠC NÀY LÀ DÀNH CHO MẸ!! Let's play</button>
+					<button class="btn btn-primary" id="bannar_coming">TRANG TRÍ MỘT CHÚT NÀO!!</button>
+					<button class="btn btn-primary" id="balloons_flying">MỘT VÀI QUẢ BÓNG BAY!!</button>
+					<button class="btn btn-primary" id="cake_fadein">cHIẾC BÁNH ĐẶT BIỆT NÀY LÀ DÀNH CHO MẸ</button>
 					<button class="btn btn-primary" id="light_candle">Thắp một ngọn nến</button>
-					<button class="btn btn-primary" id="wish_message">Happy Birthday My Mom!!</button>
+					<button class="btn btn-primary" id="wish_message">Happy Birthday MẸ lOAN!!</button>
 					<button class="btn btn-primary" id="story">Message for You!!</button>
 				</div>
 			</div>
