--- a/index.html
+++ b/index.html
@@ -102,10 +102,10 @@
 			<div class="col-md-12">
 				<p>Happy</p>
 				<p>Birthday</p>
-				<p>Sachin!!!!</p>
-				<p>God</p>
-				<p>Bless</p>
-				<p><strong>You!!!!!!!!!!</strong></p>
+				<p>Mẹ!!!!</p>
+				<p>Sinh</p>
+				<p>Nhật</p>
+				<p><strong>Vui Vẻ!!!!!!!!!!</strong></p>
 			</div>
 		</div>
 		<div class="navbar navbar-fixed-bottom">
