--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 				<p>Mẹ!!!!</p>
 				<p>Sinh</p>
 				<p>Nhật</p>
-				<p><strong>Vui Vẻ!!!!!!!!!!</strong></p>
+				<p><strong>Vui Vẻ!!!!!</strong></p>
 			</div>
 		</div>
 		<div class="navbar navbar-fixed-bottom">
